# data-jobs-pipeline

./: .env.example  .gitattributes  .gitignore  EXECUTION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
airflow/: Dockerfile  requirements-airflow.txt
airflow/dags/: pipeline_dag.py
airflow/dbt_profiles/: .user.yml  profiles.yml
data/: data_jobs.csv
dbt/: .gitignore  .user.yml  PHASE_3_README.md  dbt_project.yml  dbt_run.sh  profiles.yml  test_output.txt
dbt/models/: schema.yml
dbt/models/core/: company.sql  country.sql  job_posting.sql  job_title_category.sql  platform.sql  salary_rate_type.sql  schedule_type.sql  skill.sql  skill_category.sql
dbt/models/marts/: job_skill.sql
dbt/models/staging/: stg_job_skills_exploded.sql  stg_job_type_skills_exploded.sql  stg_raw_jobs.sql
dbt/tests/generic/: composite_key_unique.sql  dates_not_future.sql  no_orphans_fk.sql
dbt/tests/specific/: job_posting_matches_staging.sql  job_skill_unique_combination.sql
ingestion/: db.py  ingest.py  logging_config.py  parsers.py
schema/: schema.sql
tests/: test_dag.py  test_ingest.py  test_parsers.py
